--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
-.App {
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 50px;
+}
+
+body {
+  background: linear-gradient(180deg, rgba(219, 247, 255, 1) 0%, rgba(255, 238, 221, 0) 100%);
   text-align: center;
+  padding: 16px;
+  font-size: 15px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
+  max-width: 500px; 
+  height: auto; 
+  background-color: white;
+  border-radius: 20px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  padding: 20px;
+}
+
+.container > * {
+  margin-bottom: 20px;
+  width: 100%; 
+  box-sizing: border-box; 
+}
+
+input {
+  padding: 10px;
+  margin: 10px;
+  width: 60%; 
+  max-width: 300px; 
+  height: 43px;
+  border-radius: 26px;
+  border: 1.9px solid rgba(162, 230, 250, 1);
+}
+
+button {
+  width: auto; 
+  max-width: 120px; 
+  height: 30px;
   color: white;
+  border-radius: 20px;
+  background-color: rgba(13, 58, 92, 1);
+  font-weight: bold;
+}
+button svg {
+  font-size: 1.4em; /* Ajusta el tamaño del ícono */
+  vertical-align: middle; /* Centra verticalmente el ícono */
+  margin-left:8px;
 }
 
-.App-link {
-  color: #61dafb;
+img {
+  width: 70%;
+  max-width: 200px; 
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+p.first-paragraph:first-of-type {
+  margin-left: auto;
+  margin-right: -35px;
+  max-width: 80%;
+  font-size: 10px;
+  margin-top: -11px;
+}
+
+
+.second-paragraph {
+  margin-top:-10px;
+}
+
+.container h1:first-of-type {
+  font-weight: normal;
+  font-size: 23px;
 }
