--- a/src/App.css
+++ b/src/App.css
@@ -208,3 +208,15 @@ p.first-paragraph:first-of-type {
   text-align: start;
   padding-left: 39px;
 }
+
+.button-container{
+  display: flex;
+  gap: 20px; 
+
+}
+
+.chart{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
