--- a/src/App.css
+++ b/src/App.css
@@ -2,22 +2,18 @@
 html,body {
   height: 100%;
   margin: 0;
-  background-image: linear-gradient(180deg, rgba(219, 247, 255, 1), rgba(255, 238, 221, 0));
+  /* background-color: rgba(245, 253, 255, 1); */
 
 }
 
 body {
   text-align: center;
-  padding: 16px;
-
-
 }
-
-
 
 /* CALENDAR */
 
 .react-calendar__tile {
+
   width: 28px; 
   height: 28px; 
   border-radius: 70%; 
@@ -34,7 +30,9 @@ body {
 
 }
 .react-calendar {
-  max-width: 600px; 
+  max-width: 700px; 
+  
+  margin:20px;
 }
 
 .react-calendar__month-view {
